# automatically_annotation

./: README.md
denso_msgs/: CMakeLists.txt  package.xml
denso_msgs/msg/: new_1_array.msg  new_array.msg  object_kiriwake.msg  out_segmentation.msg  yolo_bridge.msg
denso_srvs/: CMakeLists.txt  package.xml
denso_srvs/srv/: Bbox_to_SemSeg.srv  SemSeg_Occ2.srv  bounding.srv  img_bridge_pcl.srv  input_Bbox.srv  input_bridge.srv  input_data.srv  input_occ.srv  input_semseg.srv  meshcloud_service.srv  object_occuluder_service.srv  sensor_data_service.srv  tf_quaternion_service.srv  tsuchida_bridge.srv  tsuchida_sama.srv
semantic_annotation/: CMakeLists.txt  package.xml
semantic_annotation/include/semantic_annotation/: box_extract_3d.hpp  mesh_cloud_publisher.hpp  mesh_sampler.hpp  nearest_point_search.hpp
semantic_annotation/launch/: box_extract.launch  semantic_segmentation.launch
semantic_annotation/scripts/: move_object.py  record_segmentation_data.py  util.py
semantic_annotation/src/: box_extract_3d.cpp  box_extract_3d_node.cpp  mesh_cloud_publisher.cpp  mesh_cloud_publisher_node.cpp  mesh_sampler.cpp  nearest_point_search.cpp  nearest_point_search_node.cpp  visualize_pointcloud.cpp
setup_simulator/: CMakeLists.txt  package.xml
setup_simulator/include/setup_simulator/: cloud_common.hpp  cloud_planar_segmenter.hpp  tf_publisher.hpp
setup_simulator/launch/: phoxi_sensor_pointcloud_setup.launch  phoxi_sensor_setup.launch  ur_and_phoxi_sensor_setup.launch
setup_simulator/models/HV6/: model.config  model.sdf
setup_simulator/models/HV7/: model.config  model.sdf
setup_simulator/models/HV7/meshes/: HV7_1.stl
setup_simulator/models/collision_object/: model.config  model.sdf
setup_simulator/models/object_box/: model.config  model.sdf
setup_simulator/models/object_box/meshed/: object_box.dae  object_box_2.dae  object_box_3.dae  object_box_kai.dae  object_box_kai_kai.dae
setup_simulator/models/object_box_large/: model.config  model.sdf
setup_simulator/models/object_box_small/: model.config  model.sdf
setup_simulator/models/object_box_small/meshed/: object_box.dae  object_box_1.dae
setup_simulator/rviz/: denso.rviz
setup_simulator/scripts/: arm_control.py  box_and_object_move.py
setup_simulator/src/: cloud_planar_segmenter.cpp  tf_publisher.cpp
setup_simulator/urdf/: common.xacro  hande_camera.urdf.xacro  phoxi_camera.gazebo.xacro  phoxi_camera.urdf.gazebo.xacro  phoxi_camera_not_pointcloud.gazebo.xacro  phoxi_camera_only.urdf.gazebo.xacro  phoxi_camera_pointcloud.urdf.gazebo.xacro  ur3_and_phoxi.urdf.xacro  ur3e.urdf.xacro  ur3e_hand_E_camera.urdf.xacro  ur3e_joint_limited_robot.urdf.xacro
setup_simulator/urdf/phoxi_camera_description/: phoxi_camera.urdf.macro.xacro  phoxi_camera.urdf.xacro  phoxi_camera_value.urdf.xacro
setup_simulator/world/: haji_simple.world  yolo_cafe.world  yolo_cafe_table.world  yolo_iroiro.world  yolo_table_and_box.world  yolo_table_iroiro.world  yolo_tameshi.world
yolo_annotation/: CMakeLists.txt  package.xml
yolo_annotation/include/yolo_annotation/: yolo_annotation.hpp  yolo_annotation_kai.hpp
yolo_annotation/launch/: kai_yolo_annotation.launch  kai_yolo_annotation_all_HV8.launch  yolo_annotation.launch
yolo_annotation/scripts/: move_object_yolo_kai.py  move_service_object.py  move_yolo_object.py  publisher.py  service_call.py  subscriber_and_server.py
yolo_annotation/src/: message_casher.cpp  random  random.cpp  sensor_angle_move.cpp  sensor_move_try.cpp  sensor_service_move.cpp  yolo_annotation.cpp  yolo_annotation_kai.cpp  yolo_annotation_kai_all_HV8.cpp
